--- a/static/style.css
+++ b/static/style.css
@@ -13,15 +13,20 @@ body {
 body {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
-header {
+body > header {
     display: flex;
     flex-direction: column;
+    width: 100%;
 }
 
 main {
     flex-grow: 1;
+
+    display: flex;
+    width: 75%;
 }
 
 footer {
@@ -29,6 +34,20 @@ footer {
     align-content: center;
     justify-content: center;
     flex-direction: column;
+    width: 100%;
+}
+
+.posts-container {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+}
+
+.post-header {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .center {
